--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="question-div" id="Question-screen" >
-        <h3 id="question" ></h3>
-        <ul id="ul" ></ul>
-        <!-- <li>a</li>
-        <li>b</li>
-        <li>c</li>
-        <li>d</li> -->
+    <div class="main" id="main">
+
     </div>
+
 </body>
 <script src="app.js"></script>
 </html>
